--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^5.3.1",
     "firebase": "^10.5.2",
     "ionicons": "^7.0.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
